--- a/HTML-PC/app/template/main.html
+++ b/HTML-PC/app/template/main.html
@@ -24,33 +24,38 @@
         <div class="container">
             <div class="flex flex_row">
                 <div class="left_menu">
-                    <a href="javascript:;" id="vibeji-ham" class="item"><span></span> <span></span> <span></span></a>
+                    <a class="logo-mobile" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/m_logo.png" alt=""><img class="logo-white" src="images/graphics/m_logo-white.png" alt=""></a>
+                    <a href="javascript:;" class="vibeji-ham item"><span></span> <span></span> <span></span></a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
-                                <li>
-                                    <a class="logo" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.png" alt=""><img class="logo-white" src="images/graphics/logo-white.png" alt=""></a>
+                                <li class="logo">
+                                    <a title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.png" alt=""><img class="logo-white" src="images/graphics/logo-white.png" alt=""></a>
+                                    <a href="javascript:;" class="vibeji-ham item open"><span></span> <span></span> <span></span></a>
                                 </li>
                                 <li class="active">
-                                    <a href="#">Tìm việc</a>
+                                    <a class="link" href="#">Tìm việc</a>
                                 </li>
                                 <li>
-                                    <a href="#">Công ty</a>
+                                    <a class="link" href="#">Công ty</a>
                                 </li>
                                 <li class="default">
-                                    <a href="#">Blog</a>
+                                    <a class="link" href="#">Blog</a>
                                     <span class="sub_menu">+</span>
                                     <div class="level2">
-                                        <a href="#">Giới thiệu</a>
                                         <a href="#">FAQ</a>
                                         <a href="#">Tin tức</a>
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="#">Giới thiệu</a>
+                                    <a class="link" href="#">Giới thiệu</a>
                                 </li>
                                 <li>
-                                    <a href="#">Liên hệ</a>
+                                    <a class="link" href="#">Liên hệ</a>
+                                </li>
+                                <li class="btn-mobile">
+                                    <a class="btn-default">Cộng tác viên</a>
+                                    <a class="btn-default none">Nhà tuyển dụng</a>
                                 </li>
                             </ul>
                         </div>
@@ -65,7 +70,7 @@
     </section>
 
     <!-- build:content -->
-    
+
     <!--Footer-->
     <footer class="footer">
         <div class="container">
@@ -93,7 +98,8 @@
                         <div class="col-sm-6">
                             <h3 class="title">Partners</h3>
                             <ul>
-                                <li><a href="#">Headhunter Operation Mechanism </a></li>
+                                <li><a href="#">Headhunter Operation Mechanism
+</a></li>
                                 <li><a href="#">Recruiter Operation Mechanism</a></li>
                                 <li><a href="#">Other Products and Services</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
