--- a/HTML-PC/css/scss/_header.scss
+++ b/HTML-PC/css/scss/_header.scss
@@ -1,5 +1,3 @@
-
-
 .topnav {
     position: sticky;
     top: 0;
@@ -7,25 +5,23 @@
     right: 0;
     z-index: 1000;
     transition: all .2s ease-in-out;
-    // border-bottom: 1px solid #e5e5e5;
-    // border-bottom: 1px solid rgba(107, 119, 154, 0.15);
     &.sticky {
         background-color: #fff;
         box-shadow: 0 2px 15px rgba(0, 0, 0, .09);
-        
-        .main-menu {
-            top: 52px;
-        }
     }
     .flex_row {
         align-items: center;
         height: 108px;
         justify-content: space-between;
     }
+    .logo-mobile {
+        display: none;
+    }
     .logo {
-        margin-right: 30px;
-        img {
-            width: 160px;
+        margin-right: 70px!important;
+        width: 160px;
+        a {
+            padding-right: 0!important;
         }
         .logo-dark {
             display: block;
@@ -34,7 +30,7 @@
             display: none;
         }
     }
-    #vibeji-ham {
+    .vibeji-ham {
         width: 25px;
         height: 20px;
         position: absolute;
@@ -50,23 +46,20 @@
             position: absolute;
             height: 3px;
             width: 100%;
-            background: linear-gradient(30deg, #7e6fda 0, #ff0062 100%);
-            border-radius: 9px;
+            background: #fff;
+            border-radius: 2px;
             opacity: 1;
             right: 0;
             transform: rotate(0);
             transition: .25s ease-in-out;
             &:nth-child(1) {
                 top: 0;
-                width: 55%;
             }
             &:nth-child(2) {
                 top: 7px;
-                width: 100%;
             }
             &:nth-child(3) {
                 top: 14px;
-                width: 75%;
             }
         }
         &.open {
@@ -107,7 +100,7 @@
                 margin-right: 25px;
                 display: flex;
                 padding: 11px 0;
-                &>a {
+                .link {
                     font-size: px_to_rem(20px);
                     font-weight: 400;
                     padding-right: 15px;
@@ -157,21 +150,12 @@
                         }
                     }
                 }
+                &.btn-mobile {
+                    display: none;
+                }
                 &:last-child {
                     margin-right: 0
                 }
-                // &:hover{
-                //     &>a{
-                //         &::before{
-                //             content: "";
-                //             background: var(--colormain);
-                //             height: 2px;
-                //             position: absolute;
-                //             width: 100%;
-                //             bottom: -11px;
-                //         }
-                //     }
-                // }
             }
         }
         @media (min-width: 992px) {
@@ -251,14 +235,97 @@
                 }
             }
         }
-        @media (max-width: 1199px) {
+    }
+    &.home {
+        background: none;
+        &.sticky {
+            background-color: #115061;
+        }
+        .logo-dark {
+            display: none;
+        }
+        .logo-white {
+            display: block;
+        }
+    }
+    @media (max-width: 1304px) {
+        .main-menu {
             .nav {
                 &>li {
-                    margin-right: 15px;
+                    margin-right: 10px;
+                    .link {
+                        font-size: px_to_rem(18px);
+                    }
+                    &.logo {
+                        margin-right: 40px!important;
+                    }
                 }
             }
         }
-        @media (max-width: 991px) {
+        .right_menu {
+            .btn-default {
+                height: 45px;
+            }
+        }
+    }
+    @media (max-width: 1199px) {
+        .logo {
+            width: 145px;
+        }
+        .flex_row {
+            height: 80px;
+        }
+        .main-menu {
+            .nav {
+                &>li {
+                    margin-right: 15px;
+                    .link {
+                        font-size: px_to_rem(18px);
+                    }
+                    &.logo {
+                        margin-right: 30px !important;
+                    }
+                }
+            }
+        }
+        .right_menu {
+            .btn-default {
+                padding: 0 15px;
+                margin-left: 6px;
+            }
+        }
+    }
+    @media (max-width: 991px) {
+        .logo-mobile {
+            display: block;
+            img {
+                width: 146px;
+            }
+            &.open {
+                img {
+                    display: none;
+                }
+                .logo-dark {
+                    display: block;
+                }
+            }
+        }
+        .vibeji-ham {
+            display: block;
+            top: 30px;
+        }
+        .main-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 100% !important;
+            background-color: #fff !important;
+            padding-bottom: 20px;
+            overflow-y: scroll;
+            color: #4d4d4d;
+            -webkit-transition: all .25s ease-in-out;
+            transition: all .25s ease-in-out;
+            z-index: 100;
             .level2 {
                 display: none;
                 [class*='grid__'] {
@@ -301,17 +368,6 @@
                     }
                 }
             }
-            position: fixed;
-            top: 90px;
-            bottom: 0;
-            right: -100%;
-            width: 100% !important;
-            background-color: #fff !important;
-            overflow-y: scroll;
-            color: #4d4d4d;
-            -webkit-transition: all .25s ease-in-out;
-            transition: all .25s ease-in-out;
-            z-index: 1001;
             .nav {
                 display: block;
                 &>li {
@@ -319,15 +375,64 @@
                     margin-right: 0;
                     display: block;
                     position: relative;
-                    border-bottom: 1px solid #e5e5e5;
-                    &>a {
+                    margin-bottom: 10px;
+                    .link {
                         display: block;
                         width: 100%;
-                        padding: 0 15px;
+                        padding: 0 24px;
                         position: relative;
                         border-radius: 0;
+                        color: #A9A9A9;
+                        font-size: 20px;
                         &::before {
                             display: none;
+                        }
+                    }
+                    &.logo {
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+                        align-items: center;
+                        border-bottom: 1px solid #E9E9E9;
+                        padding: 16px 24px 16px 24px;
+                        margin-bottom: 20px;
+                        img {
+                            width: 145px;
+                        }
+                        .logo-white {
+                            display: none;
+                        }
+                        .logo-dark {
+                            display: block;
+                        }
+                        .vibeji-ham {
+                            position: static;
+                            span {
+                                background: #17677B;
+                                &:nth-child(1) {
+                                    top: 9px;
+                                    width: 100%;
+                                    transform: rotate(135deg);
+                                }
+                                &:nth-child(2) {
+                                    opacity: 0;
+                                    right: 0px;
+                                    width: 100%;
+                                }
+                                &:nth-child(3) {
+                                    top: 9px;
+                                    width: 100%;
+                                    transform: rotate(-135deg);
+                                }
+                            }
+                        }
+                    }
+                    &.btn-mobile {
+                        display: block;
+                        padding: 0 24px;
+                        .btn-default {
+                            width: 100%;
+                            margin-top: 10px;
                         }
                     }
                     .sub_menu {
@@ -343,69 +448,14 @@
                             display: none
                         }
                     }
-                    &.active {
-                        &>a {
-                            background: #fff
-                        }
-                    }
                 }
             }
             &.open {
                 right: 0;
             }
         }
-    }
-    &.home {
-        background: none;
-        &.sticky{
-            background-color: #115061;
-        }
-        .logo-dark {
-            display: none;
-        }
-        .logo-white {
-            display: block;
-        }
-    }
-    @media (max-width: 1399px) {
         .right_menu {
-            .btn-default{
-                height: 45px;
-            }
-        }
-        .main-menu {
-            .nav{
-                &>li{
-                    margin-right: 20px;
-                    &>a{
-                        font-size: px_to_rem(18px);
-                    }
-                }
-            }
-        }
-    }
-    @media (max-width: 1199px) {
-        .logo {
-            width: 125px;
-            margin-top: -8px;
-        }
-        .flex_row {
-            height: 60px;
-        }
-    }
-    @media (max-width: 991px) {
-        .logo {
-            margin-top: -5px;
-        }
-        .flex_row {
-            height: 52px;
-        }
-        #vibeji-ham {
-            display: block;
-            top: 16px;
-        }
-        .flex_right {
-            margin-right: 50px;
+            display: none;
         }
     }
     @media (max-width: 576px) {
@@ -422,13 +472,6 @@
     }
 }
 
-body.active {
-    .overlay {
-        opacity: 1;
-        z-index: 9;
-    }
-}
-
 .overlay {
     background: rgba(0, 0, 0, .4);
     width: 100%;
@@ -442,4 +485,8 @@ body.active {
     -webkit-transition: .2s ease-out;
     -ms-transition: .2s ease-out;
     transition: .2s ease-out;
+    &.open {
+        opacity: 1;
+        z-index: 9;
+    }
 }
