--- a/HTML-PC/css/fonts/iconfont/iconfont.css
+++ b/HTML-PC/css/fonts/iconfont/iconfont.css
@@ -3,11 +3,11 @@ iconfont Webfont
 */
 @font-face {
 	font-family: 'iconfont';
-	src: url('iconfont.eot?1698846181402');
-	src: url('iconfont.eot?#iefix-1698846181402') format('embedded-opentype'),
-		url('iconfont.woff2?1698846181402') format('woff2'),
-		url('iconfont.woff?1698846181402') format('woff'),
-		url('iconfont.ttf?1698846181402') format('truetype');
+	src: url('iconfont.eot?1699005634734');
+	src: url('iconfont.eot?#iefix-1699005634734') format('embedded-opentype'),
+		url('iconfont.woff2?1699005634734') format('woff2'),
+		url('iconfont.woff?1699005634734') format('woff'),
+		url('iconfont.ttf?1699005634734') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -40,60 +40,88 @@ Glyphs list
 			content: '\ea02';
 		}
 
-		 .iconfont-cancel:before {
+		 .iconfont-business:before {
 			content: '\ea03';
 		}
 
-		 .iconfont-close:before {
+		 .iconfont-cancel:before {
 			content: '\ea04';
 		}
 
-		 .iconfont-currency_exchange:before {
+		 .iconfont-close:before {
 			content: '\ea05';
 		}
 
-		 .iconfont-gpp_good:before {
+		 .iconfont-code:before {
 			content: '\ea06';
 		}
 
-		 .iconfont-group_add:before {
+		 .iconfont-currency_exchange:before {
 			content: '\ea07';
 		}
 
-		 .iconfont-lang:before {
+		 .iconfont-gpp_good:before {
 			content: '\ea08';
 		}
 
-		 .iconfont-loan:before {
+		 .iconfont-group_add:before {
 			content: '\ea09';
 		}
 
-		 .iconfont-location:before {
+		 .iconfont-lang:before {
 			content: '\ea0a';
 		}
 
-		 .iconfont-office:before {
+		 .iconfont-loan:before {
 			content: '\ea0b';
 		}
 
-		 .iconfont-paid:before {
+		 .iconfont-location:before {
 			content: '\ea0c';
 		}
 
-		 .iconfont-right:before {
+		 .iconfont-Lock:before {
 			content: '\ea0d';
 		}
 
-		 .iconfont-search:before {
+		 .iconfont-Message:before {
 			content: '\ea0e';
 		}
 
-		 .iconfont-signpost:before {
+		 .iconfont-office:before {
 			content: '\ea0f';
 		}
 
-		 .iconfont-web:before {
+		 .iconfont-paid:before {
 			content: '\ea10';
+		}
+
+		 .iconfont-phone:before {
+			content: '\ea11';
+		}
+
+		 .iconfont-right:before {
+			content: '\ea12';
+		}
+
+		 .iconfont-search:before {
+			content: '\ea13';
+		}
+
+		 .iconfont-signpost:before {
+			content: '\ea14';
+		}
+
+		 .iconfont-user:before {
+			content: '\ea15';
+		}
+
+		 .iconfont-visibility_off:before {
+			content: '\ea16';
+		}
+
+		 .iconfont-web:before {
+			content: '\ea17';
 		}
 
 		
