--- a/HTML-PC/css/scss/_footer.scss
+++ b/HTML-PC/css/scss/_footer.scss
@@ -12,6 +12,7 @@
     .title{
         font-weight: bold;
         color: #17677B;
+        font-size: px_to_rem(24px);
     }
     ul{
         padding-left: 0;
@@ -23,4 +24,24 @@
         display: block;
         margin-bottom: 17px;
     }
+    @media (max-width: 767px) {
+        font-size: px_to_rem(16px);
+        padding: 40px 0 10px 0;
+        .logo{
+            width: 164px;
+        }
+        .title{
+            font-size: px_to_rem(20px);
+        }
+        ul{
+            margin-bottom: 30px;
+        }
+        .col-md-4{
+            margin-bottom: 30px;
+        }
+        .col-md-8{
+            padding-left: 15px;
+        }
+    }
+
 }
